// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel basic 1`] = `
.c6 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c6 *[stroke*="#"],
.c6 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*="#"],
.c6 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c12 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c12 g {
  fill: inherit;
  stroke: inherit;
}

.c12 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c12 *[stroke*="#"],
.c12 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c12 *[fill-rule],
.c12 *[FILL-RULE],
.c12 *[fill*="#"],
.c12 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c8:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c13 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        id="active0"
      >
        <div
          className="c4"
        >
          <button
            className="c5"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <svg
              aria-label="Previous"
              className="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            className="c7"
          >
            <img
              className=""
              src="//v2.grommet.io/assets/IMG_4245.jpg"
            />
          </div>
          <button
            className="c8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <svg
              aria-label="Next"
              className="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </button>
        </div>
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <button
              className="c11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c12"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
            <button
              className="c11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c13"
    >
      <div
        className="c3"
        id="active1"
      >
        <div
          className="c4"
        >
          <button
            className="c5"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <svg
              aria-label="Previous"
              className="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            className="c14"
          >
            <img
              className=""
              src="//v2.grommet.io/assets/IMG_4210.jpg"
            />
          </div>
          <button
            className="c8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <svg
              aria-label="Next"
              className="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </button>
        </div>
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <button
              className="c11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c12"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
            <button
              className="c11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel basic with \`initialChild: 1\` 1`] = `
.c6 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c6 *[stroke*="#"],
.c6 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*="#"],
.c6 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c12 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c12 g {
  fill: inherit;
  stroke: inherit;
}

.c12 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c12 *[stroke*="#"],
.c12 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c12 *[fill-rule],
.c12 *[FILL-RULE],
.c12 *[fill*="#"],
.c12 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c5:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c1 {
  position: relative;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c13 {
  position: relative;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        id="active0"
      >
        <div
          className="c4"
        >
          <button
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <svg
              aria-label="Previous"
              className="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            className="c7"
          >
            <img
              className=""
              src="//v2.grommet.io/assets/IMG_4245.jpg"
            />
          </div>
          <button
            className="c8"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <svg
              aria-label="Next"
              className="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </button>
        </div>
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <button
              className="c11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
            <button
              className="c11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c12"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c13"
    >
      <div
        className="c3"
        id="active1"
      >
        <div
          className="c4"
        >
          <button
            className="c5"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <svg
              aria-label="Previous"
              className="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            className="c14"
          >
            <img
              className=""
              src="//v2.grommet.io/assets/IMG_4210.jpg"
            />
          </div>
          <button
            className="c8"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <svg
              aria-label="Next"
              className="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </button>
        </div>
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <button
              className="c11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
            <button
              className="c11"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c12"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 1`] = `
.c6 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c6 *[stroke*="#"],
.c6 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*="#"],
.c6 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c12 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c12 g {
  fill: inherit;
  stroke: inherit;
}

.c12 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c12 *[stroke*="#"],
.c12 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c12 *[fill-rule],
.c12 *[FILL-RULE],
.c12 *[fill*="#"],
.c12 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c8:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c13 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="test-carousel"
  >
    <div
      class="c2"
      style="z-index: 10;"
    >
      <div
        class="c3"
        id="active0"
      >
        <div
          class="c4"
        >
          <button
            class="c5"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Previous"
              class="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="c7"
          >
            <img
              class=""
              src="//v2.grommet.io/assets/IMG_4245.jpg"
            />
          </div>
          <button
            class="c8"
            type="button"
          >
            <svg
              aria-label="Next"
              class="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <button
              class="c11"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c12"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="c11"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c3"
        id="active1"
      >
        <div
          class="c4"
        >
          <button
            class="c5"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Previous"
              class="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="c14"
          >
            <img
              class=""
              src="//v2.grommet.io/assets/IMG_4210.jpg"
            />
          </div>
          <button
            class="c8"
            type="button"
          >
            <svg
              aria-label="Next"
              class="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <button
              class="c11"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c12"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="c11"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 lcXYAf"
>
  <div
    class="StyledStack-ajspsk-0 liEjfH"
    data-testid="test-carousel"
  >
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gzpmgV"
      style="z-index: 10;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fwGXuR"
        id="active0"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 NqokZ"
        >
          <button
            class="StyledButton-sc-323bzc-0 fLcImi"
            type="button"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 EaYGa"
          >
            <img
              class="StyledImage-ey4zx9-0 gtXVuX"
              src="//v2.grommet.io/assets/IMG_4245.jpg"
            />
          </div>
          <button
            class="StyledButton-sc-323bzc-0 hxjeIc"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 QbJgA"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hNgxQO"
          >
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 jXwebn"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 kbXEEj"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 eFfYoG"
      style="z-index: 10;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fwGXuR"
        id="active1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 NqokZ"
        >
          <button
            class="StyledButton-sc-323bzc-0 fLcImi"
            type="button"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 fdJwEo"
          >
            <img
              class="StyledImage-ey4zx9-0 gtXVuX"
              src="//v2.grommet.io/assets/IMG_4210.jpg"
            />
          </div>
          <button
            class="StyledButton-sc-323bzc-0 hxjeIc"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 QbJgA"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hNgxQO"
          >
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 jXwebn"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 kbXEEj"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 lcXYAf"
>
  <div
    class="StyledStack-ajspsk-0 liEjfH"
    data-testid="test-carousel"
  >
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 eFfYoG"
      style="z-index: 10;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fwGXuR"
        id="active0"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 NqokZ"
        >
          <button
            class="StyledButton-sc-323bzc-0 hxjeIc"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 gaLfCI"
          >
            <img
              class="StyledImage-ey4zx9-0 gtXVuX"
              src="//v2.grommet.io/assets/IMG_4245.jpg"
            />
          </div>
          <button
            class="StyledButton-sc-323bzc-0 fLcImi"
            type="button"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 QbJgA"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hNgxQO"
          >
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 kbXEEj"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 jXwebn"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gzpmgV"
      style="z-index: 0;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fwGXuR"
        id="active1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 NqokZ"
        >
          <button
            class="StyledButton-sc-323bzc-0 hxjeIc"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 EaYGa"
          >
            <img
              class="StyledImage-ey4zx9-0 gtXVuX"
              src="//v2.grommet.io/assets/IMG_4210.jpg"
            />
          </div>
          <button
            class="StyledButton-sc-323bzc-0 fLcImi"
            type="button"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 QbJgA"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hNgxQO"
          >
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 kbXEEj"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 jXwebn"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel play 1`] = `
.c6 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c6 *[stroke*="#"],
.c6 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*="#"],
.c6 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c12 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c12 g {
  fill: inherit;
  stroke: inherit;
}

.c12 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c12 *[stroke*="#"],
.c12 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c12 *[fill-rule],
.c12 *[FILL-RULE],
.c12 *[fill*="#"],
.c12 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c8:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c13 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      style="z-index: 10;"
    >
      <div
        class="c3"
        id="active0"
      >
        <div
          class="c4"
        >
          <button
            class="c5"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Previous"
              class="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="c7"
          >
            <img
              class=""
              src="//v2.grommet.io/assets/IMG_4245.jpg"
            />
          </div>
          <button
            class="c8"
            type="button"
          >
            <svg
              aria-label="Next"
              class="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <button
              class="c11"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c12"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="c11"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c3"
        id="active1"
      >
        <div
          class="c4"
        >
          <button
            class="c5"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Previous"
              class="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="c14"
          >
            <img
              class=""
              src="//v2.grommet.io/assets/IMG_4210.jpg"
            />
          </div>
          <button
            class="c8"
            type="button"
          >
            <svg
              aria-label="Next"
              class="c6"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <button
              class="c11"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c12"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="c11"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel play 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 lcXYAf"
>
  <div
    class="StyledStack-ajspsk-0 liEjfH"
  >
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gzpmgV"
      style="z-index: 10;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fwGXuR"
        id="active0"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 NqokZ"
        >
          <button
            class="StyledButton-sc-323bzc-0 fLcImi"
            type="button"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 EaYGa"
          >
            <img
              class="StyledImage-ey4zx9-0 gtXVuX"
              src="//v2.grommet.io/assets/IMG_4245.jpg"
            />
          </div>
          <button
            class="StyledButton-sc-323bzc-0 hxjeIc"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 QbJgA"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hNgxQO"
          >
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 jXwebn"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 kbXEEj"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 eFfYoG"
      style="z-index: 10;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fwGXuR"
        id="active1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 NqokZ"
        >
          <button
            class="StyledButton-sc-323bzc-0 fLcImi"
            type="button"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 fdJwEo"
          >
            <img
              class="StyledImage-ey4zx9-0 gtXVuX"
              src="//v2.grommet.io/assets/IMG_4210.jpg"
            />
          </div>
          <button
            class="StyledButton-sc-323bzc-0 hxjeIc"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-ofa7kd-0 jXwebn"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 QbJgA"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hNgxQO"
          >
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 jXwebn"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 jvkqEN"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 kbXEEj"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
